--- a/modules/home-manager/ags/config/style.css
+++ b/modules/home-manager/ags/config/style.css
@@ -48,3 +48,11 @@ highlight {
 	color: #c9c4cf;
 	font-size: 3rem; 
 }
+
+.sysmenu {
+	min-width: 2000rem;
+}
+
+.sysmenu-icon {
+	padding: 100px;
+}
