--- a/modules/home-manager/hyprswitch/hyprswitch.css
+++ b/modules/home-manager/hyprswitch/hyprswitch.css
@@ -1,10 +1,11 @@
+* {
+    border: unset;
+    color: rgba(200, 200, 200, 1);
+}
+
 window {
-    --border-color: rgb(61, 61, 160);
-    --border-color-active: rgba(239, 9, 9, 0.9);
-    --bg-color: rgb(255, 255, 255);
-    --bg-color-hover: rgb(255, 255, 255);
-    --index-border-color: rgba(20, 170, 170, 0.7);
-    --border-radius: 12px;
+    border-color: rgba(90, 90, 110, 0.4);
+    border-radius: 12px;
 }
 
 .client-image {
@@ -15,30 +16,30 @@ window {
     font-size: 16px;
     font-weight: normal;
 
-    border-radius: var(--border-radius);
-    background-color: var(--bg-color);
-    border: 3px solid var(--border-color);
+    border-radius: 12px;
+    background-color: rgba(20, 20, 20, 1);
+    border: 3px solid rgba(90, 90, 110, 0.4);
 }
 
 .client:hover {
-    background-color: var(--bg-color-hover);
+    background-color: rgba(40, 40, 50, 1);
 }
 
 .client_active {
-    border: 3px solid var(--border-color-active);
+    border: 3px solid rgba(239, 9, 9, 0.9);
 }
 
 .workspace {
     font-size: 24px;
     font-weight: bold;
 
-    border-radius: var(--border-radius);
-    background-color: var(--bg-color);
-    border: 3px solid var(--border-color);
+    border-radius: 12px;
+    background-color: rgba(20, 20, 20, 1);
+    border: 3px solid rgba(90, 90, 110, 0.4);
 }
 
 .workspace:hover {
-    background-color: var(--bg-color-hover);
+    background-color: rgba(40, 40, 50, 1);
 }
 
 .workspace_special {
@@ -46,24 +47,24 @@ window {
 }
 
 .workspace_active {
-    border: 3px solid var(--border-color-active);
+    border: 3px solid rgba(239, 9, 9, 0.9);
 }
 
 .monitor {
     opacity: 0.75;
     padding: 2px;
 
-    border-radius: var(--border-radius);
-    background-color: var(--bg-color);
-    border: 4px solid var(--border-color);
+    border-radius: 12px;
+    background-color: rgba(20, 20, 20, 1);
+    border: 4px solid rgba(90, 90, 110, 0.4);
 }
 
 .monitor:hover {
-    background-color: var(--bg-color-hover);
+    background-color: rgba(40, 40, 50, 1);
 }
 
 .window_active {
-    border: 3px solid var(--border-color-active);
+    border: 3px solid rgba(239, 9, 9, 0.9);
 }
 
 .index {
@@ -72,7 +73,7 @@ window {
     font-size: 18px;
     font-weight: bold;
     font-family: monospace;
-    border-radius: var(--border-radius);
-    background-color: var(--bg-color);
-    border: 3px solid var(--index-border-color);
+    border-radius: 12px;
+    background-color: rgba(20, 20, 20, 1);
+    border: 3px solid rgba(20, 170, 170, 0.7);
 }
